# tondo

./: Cargo.toml  README.md  TONDO_IMPLEMENTATION_TRACKER.md  TONDO_LANGUAGE_SPEC.md
crates/tondo-cli/: Cargo.toml
crates/tondo-cli/src/: main.rs
crates/tondo-cli/tests/: cli.rs
crates/tondo-compiler/: Cargo.toml
crates/tondo-compiler/src/: bytecode.rs  diagnostics.rs  driver.rs  hir.rs  lib.rs  mir.rs  package.rs  resolve.rs  semantic.rs  source.rs  types.rs
crates/tondo-compiler/src/bytecode/: lower.rs
crates/tondo-compiler/src/hir/: availability.rs  capabilities.rs  check.rs  const_eval.rs  lower.rs  regions.rs  termination.rs  traits.rs  verify.rs
crates/tondo-compiler/src/mir/: lower.rs  regions.rs  verify.rs
crates/tondo-compiler/src/resolve/: api.rs  members.rs  names.rs
crates/tondo-compiler/src/syntax/: ast.rs  cst.rs  lexer.rs  mod.rs  parser.rs  token.rs
crates/tondo-compiler/src/syntax/format/: document.rs  mod.rs  printer.rs
crates/tondo-compiler/tests/: bootstrap_harness.rs  formatter_spec.rs  semantic_queries.rs  spec_lexer.rs  syntax_robustness.rs
crates/tondo-compiler/tests/support/: mod.rs
crates/tondo-vm/: Cargo.toml
docs/: architecture.md
docs/adr/: 001-rust-implementation.md  002-handwritten-parser.md  003-lossless-cst.md  004-recursive-descent-pratt.md  005-compiler-pipeline.md  006-slot-bytecode.md  007-bytecode-vm-first.md  008-explicit-values.md  009-tracing-gc.md  010-cooperative-executor.md  011-eager-logical-copies.md  012-non-incremental-pipeline.md  013-monomorphization.md  README.md  (+3 more)
tests/: README.md
(+57 files in other folders)
