[workspace]
members = [
    "crates/tondo-cli",
    "crates/tondo-compiler",
    "crates/tondo-vm",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
publish = false

[workspace.dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
unicode-ident = "=1.0.18"
unicode-normalization = "=0.1.24"

[workspace.lints.rust]
unsafe_code = "forbid"
